--- a/DemoWE/Views/Departments/Index.cshtml
+++ b/DemoWE/Views/Departments/Index.cshtml
@@ -1,9 +1,17 @@
 ﻿@model IEnumerable<DemoWE.Models.Department>
 
 @{
+    Layout = "_LayAdmin";
+
     ViewData["Title"] = "Index";
 }
+<head>
 
+
+    <link rel="stylesheet" href="/css/table.css" />
+
+
+</head>
 <h1>Index</h1>
 
 <p>
