Create user, homepage divs

--- a/DemoWE/Views/Shared/_Layout.cshtml
+++ b/DemoWE/Views/Shared/_Layout.cshtml
@@ -20,10 +20,15 @@
         <!-- Centered logo -->
         <div class="text-center logo-container">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                <br />
+
                 <img src="https://i.ibb.co/1Mr4GfG/Group.png" alt="Logo" style="max-height: 50px;">
             </a>
+            <br />
+
             <div class="logo-text">WorkEvo</div>
             <div class="logo-subtext">Task management system</div>
+
             <br />
             <div class="horizontal-divider"></div>
 
@@ -66,6 +71,7 @@
             </li>
         </ul>
         <!-- User box at the bottom -->
+        <div class="horizontal-divider"></div>
         <div class="user-box">
             <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="User Logo" class="user-logo">
             <div class="user-info">
@@ -278,7 +284,6 @@
                     z-index: -1; /* Ensure it's behind the text */
                     transition: background-color 0.3s, border-radius 0.3s; /* Smooth transition for background color and border radius */
                 }
-
             
     </style>
 
