--- a/DemoWE/Views/Home/Employee.cshtml
+++ b/DemoWE/Views/Home/Employee.cshtml
@@ -3,17 +3,39 @@
 }
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
-<p>
-    @* <asp:Label runat="server" ID="ShowDate"></asp:Label> *@
-</p>
-@* <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-... (the integrity hash) ...">
-<i class="far fa-clock"></i>
- *@
- <div style="position: absolute; top:5%; left: 50%; transform: translateX(-50%); border-radius: 10px; width:80%; height: 20%; padding: 10px; color: white; font-size: 30px; overflow: hidden; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.3);">
+<style>
+    /* Add your CSS styles here */
+    .home-content {
+        position: absolute;
+        top: 5%;
+        left: 50%;
+        transform: translateX(-50%);
+        border-radius: 10px;
+        width: 80%;
+        height: 20%;
+        padding: 10px;
+        color: white;
+        font-size: 30px;
+        overflow: hidden;
+        background: #9152f8;
+        background: -webkit-linear-gradient(top, #7579ff, #b224ef);
+        background: -o-linear-gradient(top, #7579ff, #b224ef);
+        background: -moz-linear-gradient(top, #7579ff, #b224ef);
+        background: linear-gradient(top, #7579ff, #b224ef);
+        box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
+        transition: left 0.5s; /* Smooth transition when moving the content */
+    }
+
+    .sidebar-open .home-content {
+        left: calc(200px + 45%);
+    }
+</style>
+
+<!-- Your homepage content -->
+<div class="home-content">
     <!-- Time icon -->
     <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: 80px;">
         <img src="https://www3.0zz0.com/2024/05/14/21/558961871.png" alt="Logo" style="max-height: 80px;">
-
     </div>
 
     <div style="padding: 30px; left: 30px; font-size: 40px; position: absolute; top: 50%; transform: translateY(-50%); padding: 30px;">
@@ -26,6 +48,7 @@
     </div>
 </div>
 
+<!-- Rest of your homepage content -->
 <div style="position: absolute; top:35%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height: 20%; padding: 10px; color: white; font-size: 30px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
     <div style="display: flex; justify-content: center; align-items: center; height: 100%;font-size: 40px;">
         @ViewBag.DepartmentName Department
@@ -48,6 +71,7 @@
         }
     </div>
 </div>
+
 <form id="taskForm">
     <div id="taskDataContainer" style="position: absolute; top:35%; left:82%; transform: translateX(-50%); border-radius: 10px; width:15%; max-width: 300px; height: 45%; max-height: 500px; overflow-y: auto; padding: 10px; color: black; font-size: 20px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); justify-content: center; align-items: center;box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
 
