--- a/DemoWE/Views/Departments/Index.cshtml
+++ b/DemoWE/Views/Departments/Index.cshtml
@@ -5,6 +5,24 @@
 
     ViewData["Title"] = "Index";
 }
+<style>
+    .btn {
+        background-color: #D8D8D8;
+        border: none;
+        color: black;
+        padding: 12px 12px;
+        text-align: center;
+        font-size: 11px;
+        margin: 1px 1px;
+        opacity: 0.6;
+        transition: 0.3s;
+        width: 100px;
+    }
+
+        .btn:hover {
+            opacity: 1
+        }
+</style>
 <head>
 
 
@@ -14,10 +32,8 @@
 </head>
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+
+<table >
     <thead>
         <tr>
             <th>
@@ -26,7 +42,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.DepartmentManagerID)
             </th>
-            <th></th>
+            <th> <a id="createButton" class="btn" style="font-size: 15px;" asp-action="Create">Create New</a></th>
         </tr>
     </thead>
     <tbody>
@@ -39,9 +55,18 @@
                 @Html.DisplayFor(modelItem => item.DepartmentManagerID)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.DepartmentID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DepartmentID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.DepartmentID">Delete</a>
+                    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                        <div class="btn-group" role="group">
+                            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Option</button>
+                            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                <a class="dropdown-item" asp-action="Edit" asp-route-id="@item.DepartmentID">Edit</a>
+                                <a class="dropdown-item" asp-action="Details" asp-route-id="@item.DepartmentID">Details</a>
+                                <a class="dropdown-item" asp-action="Delete" asp-route-id="@item.DepartmentID">Delete</a>
+                            </div>
+
+                        </div>
+
+                    </div>
             </td>
         </tr>
 }
