--- a/DemoWE/Views/Users/Index.cshtml
+++ b/DemoWE/Views/Users/Index.cshtml
@@ -5,6 +5,24 @@
 
     ViewData["Title"] = "Index";
 }
+<style>
+    .btn {
+        background-color: #D8D8D8;
+        border: none;
+        color: black;
+        padding: 12px 12px;
+        text-align: center;
+        font-size: 11px;
+        margin: 1px 1px;
+        opacity: 0.6;
+        transition: 0.3s;
+        width: 100px;
+    }
+
+        .btn:hover {
+            opacity: 1
+        }
+</style>
 <head>
 
 
@@ -14,10 +32,8 @@
 </head>
 <h1>Index</h1>
     
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+
+<table >
     <thead>
         <tr>
             <th>
@@ -44,7 +60,8 @@
             <th>
                 @Html.DisplayNameFor(model => model.DepartmentID)
             </th>
-            <th></th>
+            <th> <a id="createButton" class="btn" style="font-size: 15px;"  asp-action="Create">Create New</a></th>
+
         </tr>
     </thead>
     <tbody>
@@ -75,9 +92,20 @@
                 @Html.DisplayFor(modelItem => item.DepartmentID)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.EmployeeNumber">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.EmployeeNumber">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.EmployeeNumber">Delete</a>
+                    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                        <div class="btn-group" role="group">
+                            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Option</button>
+                            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                    <a class="dropdown-item" asp-action="Edit" asp-route-id="@item.EmployeeNumber">Edit</a> 
+                    <a class="dropdown-item" asp-action="Details" asp-route-id="@item.EmployeeNumber">Details</a> 
+                    <a class="dropdown-item" asp-action="Delete" asp-route-id="@item.EmployeeNumber">Delete</a>
+                        </div>
+
+                        </div>
+
+                    </div>
+
+                    
             </td>
         </tr>
 }
