--- a/DemoWE/Views/Users/SetNewPassword.cshtml
+++ b/DemoWE/Views/Users/SetNewPassword.cshtml
@@ -41,7 +41,7 @@
 </head>
 <body>
     <div class="limiter">
-        <div class="container-login100" style="background-image: url('~/images/bg-01.jpg');">
+        <div class="container-login100" style="background-image: url('/images/bg-01.jpg');">
             <div class="wrap-login100">
       
                         <form asp-action="SetNewPassword" method="post">
