--- a/DemoWE/Views/Home/Employee.cshtml
+++ b/DemoWE/Views/Home/Employee.cshtml
@@ -56,7 +56,7 @@
         @ViewBag.DepartmentName Department
     </div>
 </div>
-
+<a class="nav-link text-dark text-center" asp-area="" asp-controller="STasks" asp-action="Index">
 <div style="position: absolute; top:60%; left: 20%; transform: translateX(-50%); border-radius: 10px; width:20%; height:  20%; padding: 10px; color: white; font-size: 30px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
     <div style="display: flex; justify-content: center; align-items: center; height: 100%;font-size: 40px;">
         @if (ViewBag.NewOrInProgressCount == 1)
@@ -73,6 +73,7 @@
         }
     </div>
 </div>
+</a>
 
 <form id="taskForm">
     <div id="taskDataContainer" style="position: absolute; top:35%; left:82%; transform: translateX(-50%); border-radius: 10px; width:15%; max-width: 300px; height: 45%; max-height: 500px; overflow-y: auto; padding: 10px; color: black; font-size: 20px; background: #9152f8; background: -webkit-linear-gradient(top, #7579ff, #b224ef); background: -o-linear-gradient(top, #7579ff, #b224ef); background: -moz-linear-gradient(top, #7579ff, #b224ef); background: linear-gradient(top, #7579ff, #b224ef); justify-content: center; align-items: center;box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.3);">
