Project details styling and index table container, table.css changes.

--- a/DemoWE/Views/STasks/Index.cshtml
+++ b/DemoWE/Views/STasks/Index.cshtml
@@ -54,7 +54,7 @@
 </p>
 
 
-
+<div class="table-container">
 <table>
     <thead>
         <tr>
@@ -147,6 +147,7 @@
         }
     </tbody>
 </table>
+</div>
 
 <!-- CreateModal content -->
 <div class="row">
